[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solexplain"
version = "0.2.1"
description = "Solana transaction explainer with pluggable protocol decoders"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["base58"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "isort", "flake8"]

[project.scripts]
solexplain = "solexplain.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
